2004-10-06  Derek Price  <derek@ximbiot.com>

	* cvs.h: Move getopt.h and regex.h into the GNULIB include section.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* main.c (cmds): Release calls unedit, to it modifies the repository.
	(struct cmd): Add const and full prototype where needed.
	* sanity.sh (edit-check): Use modify_repo where needed.
	(release): No more special case for release in proxy mode.
	(Patch from Mark D. Baushke  <mdb@cvshome.org>.)

	* release.c (release): Simplify login in if statement.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* client.c (send_file_names): Back out broken portion of previous
	change.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* client.c (call_in_directory): Make args of function arg const.
	* client.h, client.c, edit.h, edit.c, server.h, zlib.c: Carry change
	through to called functions and functions passed in as args.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* checkout.c, commit.c, edit.c, rcs.c: Avoid typecasts.  Some
	reformatting.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* client.c: Avoid more typecasts.  Some reformatting.

2004-10-06  Mark D. Baushke  <mdb@cvshome.org>

	* client.c (send_file_names): Use new save-cwd API.
	(connect_to_pserver): Use a union to avoid incompatible pointer
	type warnings.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* cvs.h (Xstrdup): New proto mapped via define to xstrdup.
	* subr.c (Xstrdup): New function.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* add.c, client.c, history.c, import.c, mkmodules.c, modules.c,
	recurse.c, release.c, tag.c, update.c: Use new save-cwd API.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* checkout.c, client.c, commit.c, create_adm.c, cvs.h, filesubr.c,
	hardlink.c, history.c, logmsg.c, main.c, recurse.c, update.c:
	s/xgetwd/xgetcwd/.

2004-10-04  Derek Price  <derek@ximbiot.com>

	* client.c (responses): Add "Edit-file".
	(handle_edit_file): New function.
	* commit.c (usage): Add -c option.